# levai-v2

./: .dockerignore  .gitignore  Dockerfile  LICENCE.txt  Makefile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
apps/chat/: admin.py  apps.py  controller.py  models.py  urls.py  views.py
apps/chat/migrations/: 0001_initial.py  0002_alter_chat_options_alter_chatmessage_options_and_more.py  0003_rename_chat_id_chatmessage_chat.py  __init__.py
apps/chat/static/css/: chat.css
apps/chat/templates/: chat.html  chat_details.html  index.html
apps/document/: admin.py  apps.py  urls.py
apps/document/backend/: conversor.py
apps/document/backend/styles/: __init__.py  default.py
apps/document/static/converter/: styles.css
apps/document/templates/: __init__.py
apps/document/templates/conversor/: upload.html  upload_zip.html
apps/home/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/home/migrations/: __init__.py
apps/home/static/css/: home.css
apps/home/templates/: home.html
apps/user/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_alter_user_id.py  0003_alter_user_groups_alter_user_is_active_and_more.py
apps/user/templates/: login.html  register.html
apps/video/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/video/backend/: audio.py  conversor.py  video.py
apps/video/backend/temp/: __init__.py
apps/video/static/css/: video.css
apps/video/static/js/: convert_to_mp4.js
apps/video/templates/: __init__.py  convert_to_mp4.html  video_download.html  video_to_audio.html
apps/video/templates/video/: download.html
core/: constants.py  settings.py
core/messages/: __init__.py  handle.py
core/repositories/: __init__.py  chat.py  user.py
core/schemas/: __init__.py  chat.py  user.py
core/services/: __init__.py  ai.py  extract.py  ia.py  user.py
core/utils/: enums.py  upload.py
database/: README.md
docs/: db.drawio
docs/apps/: chat.drawio
levai/: __init__.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
levai/apps/: __init__.py
levai/apps/chat/: __init__.py  admin.py  apps.py  controller.py  models.py  tests.py  urls.py  views.py
levai/apps/chat/migrations/: 0001_initial.py  0002_initial.py
levai/apps/chat/static/css/: chat.css
levai/apps/chat/templates/: chat.html  chat_details.html
levai/apps/document/: apps.py  models.py  tests.py  urls.py  views.py
levai/apps/document/backend/: __init__.py  conversor.py
levai/apps/document/migrations/: __init__.py
levai/apps/document/templates/: __init__.py
levai/apps/home/: apps.py  models.py  tests.py  urls.py  views.py
levai/apps/home/migrations/: __init__.py
levai/apps/home/templates/: home.html
levai/apps/task/: __init__.py  admin.py  apps.py  controller.py  models.py  tests.py  urls.py  views.py
levai/apps/task/migrations/: 0001_initial.py  __init__.py
levai/apps/task/templates/: task.html
levai/apps/user/: admin.py  apps.py  models.py  urls.py  views.py
levai/apps/user/migrations/: 0001_initial.py
levai/apps/user/templates/: login.html  register.html
levai/apps/video/: apps.py  urls.py  views.py
levai/apps/video/backend/: audio.py  conversor.py  video.py
levai/apps/video/migrations/: __init__.py
levai/core/: constants.py  settings.py
levai/core/messages/: __init__.py  error.py  handle.py
levai/core/repositories/: __init__.py  chat.py  task.py  user.py
levai/core/schemas/: __init__.py  base.py  chat.py  task.py  user.py
levai/core/services/: __init__.py  ai.py  extract.py  user.py
levai/core/utils/: __init__.py  convert.py  enums.py  upload.py
levai/static/css/: global.css
levai/static/js/: chatInput.js  global.js
levai/templates/: 403.html  404.html  500.html  base.html
levai/templates/partials/: chat_input.html  header.html  sidebar.html
nginx/: Dockerfile  nginx.conf
static/css/: global.css
static/js/: chatInput.js  global.js
templates/: 500.html  __init__.py
templates/partials/: chat_input.html  header.html  sidebar.html
tests/: conftest.py
tests/services/: test_extract_service.py
(+14 files in other folders)
