[project]
name = "levai"
version = "0.1.0"
description = "My Custom IA"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.3",
    "ffmpeg>=1.4",
    "markdown>=3.8.2",
    "mathjax>=0.1.2",
    "moviepy>=2.2.1",
    "pydantic>=2.11.7",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.16",
    "python-markdown-math>=0.9",
    "pytube>=15.0.0",
    "weasyprint>=65.1",
    "yt-dlp>=2025.6.9",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.0",
]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors (inclui E501 para limite de linha, E302 para espaçamento)
    "F",    # pyflakes (detecta valores não usados)
    "W",    # pycodestyle warnings
    "D",    # pydocstyle (docstrings obrigatórias)
    "I",    # isort (ordem dos imports)
]
ignore = [
    "D203", # conflito com D211
    "D213", # conflito com D212
]
# E302 já está incluído em "E"

[tool.ruff.format]
quote-style = "double"
