[project]
name = "levai"
version = "0.1.0"
description = "My Custom IA"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "ffmpeg>=1.4",
    "markdown>=3.8.2",
    "mathjax>=0.1.2",
    "moviepy>=2.2.1",
    "ollama>=0.5.1",
    "pdf2image>=1.17.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pydub>=0.25.1",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.16",
    "pypdf>=5.7.0",
    "pytesseract>=0.3.13",
    "python-markdown-math>=0.9",
    "pytube>=15.0.0",
    "reportlab>=4.4.2",
    "speechrecognition>=3.14.3",
    "weasyprint>=65.1",
    "yt-dlp>=2025.6.9",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "gtts>=2.5.4",
    "numpy>=2.3.1",
    "pygame>=2.6.1",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors (inclui E501 para limite de linha, E302 para espaçamento)
    "F",    # pyflakes (detecta valores não usados)
    "W",    # pycodestyle warnings
    "D",    # pydocstyle (docstrings obrigatórias)
    "I",    # isort (ordem dos imports)
]
ignore = [
    "D203", # conflito com D211
    "D213", # conflito com D212
    "E722", # bare except
    "D415", # first line should end with a period
    "D400", # first line should end with a period
    "W291", # trailing whitespace
    "D401", # First line of docstring should be in imperative mood
    "D100", # D100 Missing docstring in public module
]
# E302 já está incluído em "E"

[tool.ruff.format]
quote-style = "double"
